<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_header">

        <EditTextPreference
            app:key="diameter"
            app:title="@string/diameter_title"
            app:defaultValue="30"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="speed"
            app:title="@string/speed"
            app:defaultValue="20"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="offsetX"
            app:title="@string/offsetX_title"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="offsetY"
            app:title="@string/offsetY_title"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="startingDelay"
            app:title="@string/startingDelay"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="samplingFrequency"
            app:title="@string/samplingFrequency"
            app:defaultValue="200"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="inactivityTimeLimit"
            app:title="@string/inactivityTimeLimit"
            app:defaultValue="30000"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="roomWidth"
            app:title="@string/roomWidth"
            app:defaultValue="1000"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="roomLength"
            app:title="@string/roomLength"
            app:defaultValue="500"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

</PreferenceScreen>
